[gd_scene load_steps=2 format=3 uid="uid://cr4he8ioyyqcm"]

[ext_resource type="Script" path="res://MainMenu/MainMenu.gd" id="1_4rbjt"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4rbjt")

[node name="start_game_button" type="Button" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 181.0
offset_right = 161.0
offset_bottom = 212.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "Start Game"

[node name="laps" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 12.915
offset_top = 147.0
offset_right = 79.9775
offset_bottom = 178.0
text = "3"
placeholder_text = "laps"

[node name="select_levels" type="Label" parent="."]
layout_mode = 0
offset_left = 256.915
offset_top = 158.0
offset_right = 350.915
offset_bottom = 181.0
text = "Select levels"

[node name="levels" type="ItemList" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 180.0
offset_right = 357.0
offset_bottom = 302.0

[node name="select_vehicles" type="Label" parent="."]
layout_mode = 0
offset_left = 250.915
offset_top = 8.0
offset_right = 344.915
offset_bottom = 31.0
text = "Select vehicles"

[node name="vehicles" type="ItemList" parent="."]
layout_mode = 0
offset_left = 253.0
offset_top = 29.0
offset_right = 356.0
offset_bottom = 150.0

[connection signal="pressed" from="start_game_button" to="." method="_on_start_game_button_pressed"]
[connection signal="item_selected" from="levels" to="." method="_on_levels_item_selected"]
[connection signal="item_selected" from="vehicles" to="." method="_on_vehicles_item_selected"]
